# ElemRV

./: .gitignore  .travis.yml  BUILD  MODULE.bazel  README.rst  REUSE.toml  Taskfile.yml  build.sbt  manifest-nightly.xml  manifest.xml  podman-compose-headless.yml  podman-compose.yml
.github/workflows/: run-design.yaml
hardware/scala/elemrv/: ElemRV.scala  spi.layout
hardware/scala/elemrv/ECPIX5/: ECPIX5.scala
hardware/scala/elemrv/SG13G2/: SG13G2.scala
hardware/scala/elemrv/bootrom/: kernel.ld  soc.h  start.s
hardware/scala/elemrv/demo/: kernel.c  kernel.ld  start.s
hardware/scala/elemrv_h/: ElemRV.scala
hardware/scala/elemrv_h/ECPIX5/: ECPIX5.scala
hardware/scala/elemrv_h/SG13G2/: SG13G2.scala
hardware/scala/elemrv_n/: ElemRV.scala
hardware/scala/elemrv_n/ECPIX5/: ECPIX5.scala
hardware/scala/elemrv_n/SG13G2/: SG13G2.scala
modules/elements/: BUILD
software/elemrv_h/: spi.layout
software/elemrv_h/demo/: kernel.c  kernel.ld  start.s
software/elemrv_n/bootrom/: kernel.ld  start.s
software/elemrv_n/demo/: kernel.c  kernel.ld  start.s
